# sdkz

./: CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
app/: CMakeLists.txt  Kconfig  VERSION  debug.conf  prj.conf  sample.yaml
app/boards/: frdm_mcxa156.conf  frdm_mcxa156.overlay  jz_f407ve_dvk.overlay  jz_f407vet6.conf  jz_f407vet6.overlay  nucleo_f302r8.overlay  stm32n6570_dk.conf  stm32n6570_dk.overlay  stm32n6570_dk_app_common.dtsi  stm32n6570_dk_stm32n657xx_fsbl.conf  stm32n6570_dk_stm32n657xx_fsbl.overlay  stm32n6570_dk_stm32n657xx_sb.conf  stm32n6570_dk_stm32n657xx_sb.overlay  stm32n657x_dk.overlay
app/micropython/: Kconfig  main.c  modsocket.c  mpconfigport.h  shellcmd.c  uart_core.c
app/micropython/src/: zephyr_start.c
app/src/: camera.c  config.h  hup_server.c  hupacket_server.c  hupacket_udp.c  main.c  main.h  properties.c  pwmleds.c  udp.c  usb.c
app/sysbuild/: CMakeLists.txt  jz_f407vet6-sysbuild.conf  mcuboot.conf  stm32n6570_dk-sysbuild.conf
boards/: Kconfig
boards/common/: example_runner.board.cmake
boards/jz/jz_f407vet6/: Kconfig.defconfig  board.cmake  board.yml  jz_f407vet6.dts  jz_f407vet6_common.dtsi  jz_f407vet6_defconfig  jz_f407vet6_stm32f407xx_mcuboot.dts  jz_f407vet6_stm32f407xx_mcuboot.yaml  jz_f407vet6_stm32f407xx_mcuboot_defconfig  sysbuild.cmake
boards/jz/jz_f407vet6/support/: openocd.cfg
boards/jz_f407ve_dvk/: Kconfig.defconfig  Kconfig.jz_f407vet6  board.cmake  jz_f407ve_dvk.dts  jz_f407ve_dvk.yaml  jz_f407ve_dvk_defconfig  jz_f407ve_dvk_stm32f407xx_mcuboot.dts  jz_f407ve_dvk_stm32f407xx_mcuboot.yaml
boards/jz_f407vet6/: Kconfig.jz_f407vet6  Kconfig.sysbuild  board.yml  jz_f407vet6.dts  jz_f407vet6.yaml  jz_f407vet6_common.dtsi  jz_f407vet6_defconfig  jz_f407vet6_stm32f407xx_mcuboot.dts  jz_f407vet6_stm32f407xx_mcuboot_defconfig
boards/stm32n657x_dk/: Kconfig.defconfig  Kconfig.stm32n657x_dk  Kconfig.sysbuild  arduino_r3_connector.dtsi  board.cmake  board.yml  stm32n657x_dk.dts  stm32n657x_dk_common.dtsi  stm32n657x_dk_defconfig  stm32n657x_dk_stm32n657xx_fsbl.dts  stm32n657x_dk_stm32n657xx_fsbl_defconfig  stm32n657x_dk_stm32n657xx_sb.dts  stm32n657x_dk_stm32n657xx_sb_defconfig  sysbuild.cmake  twister.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: CMakeLists.txt  Kconfig  Kconfig.gpio_led  gpio_led.c
dts/bindings/: binding-types.txt  vendor-prefixes.txt
dts/st/n6/: stm32n6-fmc.dtsi  stm32n6-rtc.dtsi  stm32n6-timers.dtsi  stm32n657x0-sram.dtsi
include/: enet.h  huerrno.h  net_common.h
include/app/: app_api.h  bootloader.h  properties.h  settings.h  udp.h  usb.h
include/hu/: ascii85.h  bootloader.h  common.h  hupacket.h  palloc.h
include/net/: enet.h
lib/: CMakeLists.txt  Kconfig  iterables.ld
lib/app/: CMakeLists.txt  Kconfig  bbram.c  bootloader.c  settings.c  uart.c  udp.c  usb.c
lib/custom/: Kconfig
lib/hu/: CMakeLists.txt  Kconfig  ascii85.c  bootloader.c  huflash.c  hupacket.c  palloc.c
lib/net/: CMakeLists.txt  Kconfig  enet.c  enet4.c  enet6.c  net_common.c  tunnel.c  vlan.c
modules/: Kconfig  modules.cmake
modules/mcuboot/: CMakeLists.txt  Kconfig
modules/mcuboot/boot/zephyr/: Kconfig
modules/micropython/: CMakeLists.txt  Kconfig
modules/micropython/include/: mpconfigport.h  mphalport.h
modules/micropython/src/: mphalport.c
patch/: zephyr-202601031453.patch  zephyr-202606140732.patch
zephyr/: module.yml
